Fix TD-4011:Text overlaps with Picture after setting “Pdf
*Removed Space preserve
*insert display-inline for pictures
*Fixed css bug

--- a/DistFiles/Styles/Dictionary/Layout_14.css
+++ b/DistFiles/Styles/Dictionary/Layout_14.css
@@ -16,7 +16,8 @@
 @import "Running_Head_Mirrored.css";
 @import "Rules_Yes.css";
 @import "PageNumber_TopInside.css"; 
-@import "Reversal_Reference_Numbers.css";.Section_Head {
+@import "Reversal_Reference_Numbers.css";
+.Section_Head {
 page-break-after:avoid;
 orphans:2;
 }
